dealing with .feather

--- a/Context_Baseline_Public.ipynb
+++ b/Context_Baseline_Public.ipynb
@@ -189,123 +189,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "id": "335226b7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>field</th>\n",
-       "      <th>type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>region_name</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>city_name</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cpe_manufacturer_name</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cpe_model_name</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>url_host</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>cpe_type_cd</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>cpe_model_os_type</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>price</td>\n",
-       "      <td>double</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>date</td>\n",
-       "      <td>date32[day]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>part_of_day</td>\n",
-       "      <td>string</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>request_cnt</td>\n",
-       "      <td>int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>user_id</td>\n",
-       "      <td>int64</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    field         type\n",
-       "0             region_name       string\n",
-       "1               city_name       string\n",
-       "2   cpe_manufacturer_name       string\n",
-       "3          cpe_model_name       string\n",
-       "4                url_host       string\n",
-       "5             cpe_type_cd       string\n",
-       "6       cpe_model_os_type       string\n",
-       "7                   price       double\n",
-       "8                    date  date32[day]\n",
-       "9             part_of_day       string\n",
-       "10            request_cnt        int64\n",
-       "11                user_id        int64"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
     }
    ],
    "source": [
-    "data = pq.read_table(f'{LOCAL_DATA_PATH}/{DATA_FILE}/part-00000-aba60f69-2b63-4cc1-95ca-542598094698-c000.snappy.parquet')\n",
+    "data = pq.read_table(f'{LOCAL_DATA_PATH}/{DATA_FILE}')\n",
     "pd.DataFrame([(z.name, z.type) for z in data.schema], columns = [['field', 'type']])"
    ]
   },
