--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -146,16 +146,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 144724 entries, 221301 to 145315\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column   Non-Null Count   Dtype\n",
+      "---  ------   --------------   -----\n",
+      " 0   user_id  144724 non-null  int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 2.2 MB\n"
+     ]
+    }
+   ],
    "source": [
     "id_to_submit.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +554,7 @@
        "11                user_id                                              int32"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,29 +565,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "smartphone    322781599\n",
+       "tablet            53768\n",
+       "plain             36116\n",
+       "phablet           27952\n",
+       "Name: cpe_type_cd, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.select(['cpe_type_cd']).to_pandas()['cpe_type_cd'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>269970.000000</td>\n",
+       "      <td>270000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>38.793940</td>\n",
+       "      <td>207547.794719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>11.739916</td>\n",
+       "      <td>119901.875310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>103651.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>207456.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>311565.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>415313.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 age        user_id\n",
+       "count  269970.000000  270000.000000\n",
+       "mean       38.793940  207547.794719\n",
+       "std        11.739916  119901.875310\n",
+       "min        14.000000       0.000000\n",
+       "25%        30.000000  103651.500000\n",
+       "50%        37.000000  207456.500000\n",
+       "75%        47.000000  311565.250000\n",
+       "max        91.000000  415313.000000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "targets = pd.read_feather('/kaggle/input/mts-ml-cookies/target_train.feather')\n",
+    "targets = pd.read_feather(f'{LOCAL_DATA_PATH}/target_train.feather')\n",
     "targets.head()\n",
     "targets.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>field</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>age</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>is_male</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>user_id</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     field    type\n",
+       "0      age  double\n",
+       "1  is_male  string\n",
+       "2  user_id   int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "targets = pa.Table.from_pandas(targets)\n",
     "pd.DataFrame([(z.name, z.type) for z in targets.schema], columns = [['field', 'type']])"
@@ -580,9 +754,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.79 s, sys: 2.05 s, total: 8.84 s\n",
+      "Wall time: 13.8 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "data_agg = data.select(['user_id', 'url_host', 'request_cnt']).\\\n",
@@ -591,9 +774,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>field</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>request_cnt_sum</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>user_id</td>\n",
+       "      <td>int32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>url_host</td>\n",
+       "      <td>dictionary&lt;values=string, indices=int32, order...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             field                                               type\n",
+       "0  request_cnt_sum                                              int64\n",
+       "1          user_id                                              int32\n",
+       "2         url_host  dictionary<values=string, indices=int32, order..."
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([(z.name, z.type) for z in data_agg.schema], columns = [['field', 'type']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199683 urls\n",
+      "415317 users\n"
+     ]
+    }
+   ],
    "source": [
     "url_set = set(data_agg.select(['url_host']).to_pandas()['url_host'])\n",
     "print(f'{len(url_set)} urls')\n",
@@ -605,24 +863,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "CPU times: user 602 ms, sys: 559 ms, total: 1.16 s\n",
+      "Wall time: 3.43 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
+    "%pip install annoy -q\n",
     "values = np.array(data_agg.select(['request_cnt_sum']).to_pandas()['request_cnt_sum'])\n",
     "rows = np.array(data_agg.select(['user_id']).to_pandas()['user_id'].map(usr_dict))\n",
     "cols = np.array(data_agg.select(['url_host']).to_pandas()['url_host'].map(url_dict))\n",
     "mat = scipy.sparse.coo_matrix((values, (rows, cols)), shape=(rows.max() + 1, cols.max() + 1))\n",
-    "als = implicit.approximate_als.FaissAlternatingLeastSquares(factors = 50, iterations = 30, use_gpu = False, \\\n",
+    "als = implicit.approximate_als.AnnoyAlternatingLeastSquares(factors = 50, iterations = 30, use_gpu = False, \\\n",
     "       calculate_training_loss = False, regularization = 0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/a125x/opt/miniconda3/envs/torch/lib/python3.9/site-packages/implicit/utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 1.38553786277771 seconds\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "372613556c0949bcb9a245a0a91b392f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/30 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 42min 22s, sys: 21min 4s, total: 1h 3min 27s\n",
+      "Wall time: 35min 35s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "als.fit(mat)"
@@ -630,9 +930,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AnnoyModel' object has no attribute 'user_factors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m u_factors \u001b[39m=\u001b[39m als\u001b[39m.\u001b[39;49muser_factors \n\u001b[1;32m      2\u001b[0m \u001b[39mlen\u001b[39m(u_factors)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AnnoyModel' object has no attribute 'user_factors'"
+     ]
+    }
+   ],
    "source": [
     "u_factors = als.user_factors \n",
     "len(u_factors)"
@@ -640,9 +952,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AnnoyModel' object has no attribute 'item_factors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m d_factors \u001b[39m=\u001b[39m als\u001b[39m.\u001b[39;49mitem_factors\n\u001b[1;32m      2\u001b[0m \u001b[39mlen\u001b[39m(d_factors)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AnnoyModel' object has no attribute 'item_factors'"
+     ]
+    }
+   ],
    "source": [
     "d_factors = als.item_factors\n",
     "len(d_factors)"
@@ -658,9 +982,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'd_factors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:2\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'd_factors' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "inv_usr_map = {v: k for k, v in usr_dict.items()}\n",
@@ -676,9 +1012,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:2\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "x_train, x_test, y_train, y_test = train_test_split(\\\n",
